docs/src/styles/component.layout.scss
@charset "utf-8";
@use "mixin.scss";
@use "device-utils.scss";


:root {
  --header-height: 3rem;
}

.top-nav {
  box-shadow: var(--shadow-sm);
  border-bottom: 1px solid var(--border-strong-01);
}


$sideBarWidth: 15rem;

.sidenav {
  width: $sideBarWidth;
  position: fixed;
  height: 100vh;
  overflow-y: auto;
  border-right: 1px solid var(--color-outline);
}

.sidenav-components {
  padding-bottom: 0.5rem;
}

.category-name {
  margin: 0 1rem;
  padding: 1.5rem 0 0.5rem 0;
  border-bottom: 1px solid var(--color-outline);
}

.main-content {
  margin-inline-start: $sideBarWidth;
  position: relative;
  min-height: calc(100vh - var(--header-height));
  display: flex;
  flex-direction: column;
}

.page-container {

  .comp-header {
    display: flex;
    align-items: center;
    gap: var(--spacing-200);
    margin-bottom: var(--spacing-200);

    .comp-title {
      margin: 0;
    }
  }
}

.footer .footer-content {
  padding: var(--spacing-200) var(--spacing-400);
}

.page-tabs > wc-tab-panel {
  padding-top: 1rem;
}

pre[class*='language-'] {
  margin: 0;
}

.component-overview-tab {
  display: flex;
  gap: 1rem;

  .component-content {
    flex: 1;
    overflow-x: auto;
    .component-description {
      margin-bottom: var(--spacing-600);
    }
  }

  .section-nav {
    width: 23rem;
    position: relative;
    height: auto !important;

    .link {
      width: 100%;
    }
  }

}


.component-section {
  margin-bottom: var(--spacing-600);
}

.component-section > goat-text[type="body"] {
  margin-bottom: var(--spacing-200);
}

.component-container {
  display: flex;
  align-items: center;
  margin-bottom: var(--spacing-200);
  flex-wrap: wrap;
  gap: 1rem;
}



.playground-container {
  border: 1px solid var(--color-outline);
  margin-bottom: 2rem;
  border-radius: var(--border-radius);
  background: var(--background);

  .playground {
    display: flex;
    border-bottom: 1px solid var(--color-outline);

    flex-direction: column;

    .demo-area {
      min-height: 10rem;
      padding: 1rem;
      display: flex;
      align-items: center;
      justify-content: center;
      border-inline-end: 1px solid var(--color-outline);
      border-bottom: 1px solid var(--color-outline);
    }

    .demo-controls {
      display: flex;
      gap: 1rem;
      flex-wrap: wrap;
      padding: 1rem;
      width: 100%;

    }

  }


  .code-editor-container {
    padding: 1px;

    .code-editor {
      height: 10rem;
    }
  }

}

@include mixin.for-tablet-landscape-up {
  .playground-container {
    .playground {
      flex-direction: row;

      .demo-area {
        min-height: 20rem;
        flex: 1;
        border-bottom: none;
      }

      .demo-controls {
        width: 20rem;
        display: block;
      }
    }
  }
}

.centered {
  display: flex;
  align-items: center;
  justify-content: center;
}

.table-auto-height {
  min-height: auto;
}

.api-section {
  margin-bottom: var(--spacing-600);
}

.demo-canvas .demo-area {
  display: flex;
  padding: var(--spacing-600);
  align-items: center;
  justify-content: center;
  padding-block: var(--spacing-1200);
  background: linear-gradient(120deg, var(--color-primary-95), var(--color-secondary-95));
}

.demo-input .demo-area-inner {
  max-width: 20rem;
  margin: auto;
}


.demo-components .demo-area {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 1rem;
}

.previous-next-nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  --icon-color: white;
}

.previous-next-nav pc-button {
  --filled-button-container-color: var(--color-secondary);
}


@media only screen and (max-width: 1055px) {
  .sidenav {
    width: 100%;
    position: inherit;
    overflow: initial;
  }

  .main-content {
    margin-inline-start: 0;
  }

  #dir-switcher {
    display: none;
  }

  .sidenav.m-hide,
  .main-content.m-hide {
    display: none;
  }
  .section-nav {
    display: none;
  }
  .component-content {
    width: 100%;
  }
}

.section-nav-content {
  position: sticky;
  top: 60px;
}

.adsbygoogle {
  display: block;
}

